# world-cup-predictions-discord-bot

./: .env.example  .gitignore  AGENTS.md  PRIVACY.md  PRODUCT-SPEC.md  README.md  TERMS.md  ecosystem.config.js  pyproject.toml
assets/flags/: SOURCE.md
assets/fonts/: SOURCE.md
config/: tournament.schema.json
config/tournaments/: 2026_world_cup.json
docs/: _config.yml  index.md  privacy.md  terms.md
docs/assets/css/: style.scss
scripts/: healthcheck.py  release_check.py  validate_tournament.py
tests/: test_admin_permissions.py  test_command_options.py  test_discord_formatting.py  test_export_service.py  test_leaderboard_service.py  test_leaderboard_views.py  test_logging.py  test_migrations.py  test_milestone5_views.py  test_prediction_flow.py  test_release_check.py  test_results_scoring.py  test_settings.py  test_tournament_validation.py
world_cup_bot/: __init__.py  bot.py  logging.py  settings.py
world_cup_bot/cogs/: __init__.py  admin.py  foundation.py  leaderboard.py  operator.py  predictions.py
world_cup_bot/data/: __init__.py  database.py  migrations.py  repositories.py
world_cup_bot/domain/: __init__.py  locks.py  predictions.py  scoring.py  standings.py  tournament.py  validation.py
world_cup_bot/jobs/: result_sync.py
world_cup_bot/services/: export_service.py  leaderboard_service.py  live_results_client.py  prediction_service.py  prediction_view_service.py  result_sync_service.py  sample_predictions.py  sample_results.py  tournament_import.py
world_cup_bot/ui/: __init__.py  discord_formatting.py  image_renderer.py
(+12 files in other folders)
