[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-predictions-discord-bot"
version = "0.1.0"
description = "Discord bot for World Cup bracket prediction leagues."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29,<1.0",
  "CairoSVG>=2.7,<3.0",
  "Pillow>=10.0,<12.0",
  "py-cord>=2.5,<3.0",
]

[project.scripts]
world-cup-bot = "world_cup_bot.bot:main"

[tool.setuptools.packages.find]
include = ["world_cup_bot*"]

[tool.setuptools.package-data]
world_cup_bot = ["data/migrations/*.sql"]
